spoless, config messsage source
